--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "nunomaduro/larastan": "^2.6",
         "vimeo/psalm": "^5.4",
         "rector/rector": "^0.15.2",
-        "laravel/pint": "^1.3",
-        "tuupola/ksuid": "^2.1"
+        "laravel/pint": "^1.3"
     },
     "autoload": {
         "psr-4": {
@@ -46,6 +45,10 @@
         "test:lint": "./vendor/bin/pint --test",
         "test:refactor": "rector --dry-run",
         "test": [
+            "@test:lint-fix",
+            "@test:unit"
+        ],
+        "test:all": [
             "@test:lint-fix",
             "@test:refactor",
             "@test:analyse",
